--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="header">
         <div class="header_one"><h2>Header Logo</h2></div>
-        <div class="header_two"><a href="">header link one</a></div>
-        <div class="header_two"><a href="">header link two</a></div>
+        <div class="header_two"><a href="">header link one    </a></div>
+        <div class="header_two"><a href="">header link two    </a></div>
         <div class="header_two"><a href="">header link three</a></div> 
     </div>
 
@@ -22,15 +22,8 @@
         <div class="item"><h1>This website is awesome</h1></div>
         <div class="item"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p></div>
         <div class="item"><button id="Sign_Up">Sign up</button></div>
-
-
-
-        <img src="this is a placeholder for an image">
-
-
+        <img  class="pic" src="./images/grey_square.png" alt="This is placeholder text for an image">
     </div>
-
-
 
 </body>
 </html>
