Added Footer and finished basic layout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="body">
         <div class="item"><h1>This website is awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button id="sign_up">Sign up</button>
+            <button class ="button_one" id="sign_up">Sign up</button>
         </div>
         
         <img  class="pic" src="./images/grey_square.png" alt="This is placeholder text for an image">
@@ -62,15 +62,34 @@
         <div class="b4_blue">
 
             <div class="b4_text">
-                <h2>Call to action! It's time!</h2>
-                <p>Sign up for our product by clicking that button right over there!</p>
+                <div class="b4_para">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
             </div>
 
-            <div class="b4_butt">
-                <button id="b4_button">Sign up</button>
+            <div class="b4_button">
+                <button class="b4_butt" id="b4_button">Sign up</button>
             </div>
 
         </div>
+
+    </div>
+
+
+
+    <div class="footer">
+
+        <div class="footer_text">
+
+            <p>Copyright ©️ Jake Kneece 2023</p>
+
+        </div>
+
+
+
+
+
 
     </div>
 
