--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="body_three">
 
-        <div class="b3_para"><p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p></div>
+        <div class="b3_para"><p>"This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice."</p></div>
         
         <div class="b3_quote"><p>-Thor, God of Thunder</p></div>
         
