Added Final touches Website ready for javascript

--- a/index.html
+++ b/index.html
@@ -35,13 +35,20 @@
     <div class="b2_head">
         <h2>Some random information.</h2>
     </div>
+        <!-- Random blue square pics for base shape/layout -->
+    <!-- <div class ="body_two">
+        <img class="img_four" src="./images/blue_square.png" alt="">
+        <img class="img_four" src="./images/blue_square.png" alt="">
+        <img class="img_four" src="./images/blue_square.png" alt="">
+        <img class="img_four" src="./images/blue_square.png" alt="">
+    </div> -->
 
-    <div class ="body_two">
-        <img class="img_four" src="./images/blue_square.png" alt="">
-        <img class="img_four" src="./images/blue_square.png" alt="">
-        <img class="img_four" src="./images/blue_square.png" alt="">
-        <img class="img_four" src="./images/blue_square.png" alt="">
-    </div>
+        <div class="square_outline">
+            <div class="square_4"></div>
+            <div class="square_4"></div>
+            <div class="square_4"></div>
+            <div class="square_4"></div>
+        </div>
 
     <div class="body_three">
 
